--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
 
     <main>
         <section id="slider">
-            <div class="w-screen h-[600px] mt-32 px-10 md:px-32 flex justify-between gap-2 flex-col md:flex-row">
+            <div class="w-screen h-[500px] mt-32 px-10 md:px-32 flex justify-between gap-2 flex-col md:flex-row">
                 <div class="w-full md:w-3/5 h-[600px] order-2 md:order-1">
                     <p class="text-2xl text-gray-400 font-semibold">Profesional</p>
                     <h2 class="text-3xl md:text-7xl font-bold my-3">Flutter Developer and UI/UX Designer</h2>
@@ -68,6 +68,63 @@
                 </div>
                 <div class="w-full md:w-2/5 h-[600px] order-1 md:order-2">
                     <img src="../assets/img/gambar.png" alt="gambar">
+                </div>
+            </div>
+        </section>
+
+        <section id="article">
+            <div class="w-screen h-[600px] mt-8 px-10 md:px-32">
+                <div class="flex justify-between gap-2 flex-col md:flex-row">
+                    <h3 class="text-2xl font-bold">Latest Articles</h3>
+                    <a href="#" class="text-xl text-gray-500">See All</a>
+                </div>
+                <div class="flex justify-between gap-16 flex-col md:flex-row">
+                    <div class="mt-4 w-2/4">
+                        <img src="../assets/img/blog.png" alt="article" class="w-full">
+                        <p
+                            class="bg-black py-1 text-center text-white w-28 opacity-50 rounded-lg relative bottom-[17rem] left-[28rem]">
+                            3 Mins Read</p>
+                    </div>
+                    <div class="w-2/4 mt-4">
+                        <div class="flex justify-between gap-16 flex-col md:flex-row">
+                            <h3 class="text-lg font-bold text-gray-600">BEST PACKAGES - PART 1</h3>
+                            <p class="text-lg text-gray-500">24 MAY 2022</p>
+                        </div>
+                        <h4 class="text-2xl font-bold my-3">Minimalist Guide to Flutter Hooks</h4>
+                        <p class="text-lg">Hooks are a new kind of object that manages a Widget life-cycles. Hooks are a new kind of object that manages a Widget life-cycles. They exist for one reason: increase the code-sharing between widgets by removing duplicates. They exist for one reason: increase the fe-cycles. code-sharing between....</p>
+                    </div>
+                </div>
+                <div class="flex justify-between gap-16 flex-col md:flex-row">
+                    <div class="mt-4 w-2/4">
+                        <img src="../assets/img/blog.png" alt="article" class="w-full">
+                        <p
+                            class="bg-black py-1 text-center text-white w-28 opacity-50 rounded-lg relative bottom-[17rem] left-[28rem]">
+                            3 Mins Read</p>
+                    </div>
+                    <div class="mt-4 w-2/4">
+                        <img src="../assets/img/blog.png" alt="article" class="w-full">
+                        <p
+                            class="bg-black py-1 text-center text-white w-28 opacity-50 rounded-lg relative bottom-[17rem] left-[28rem]">
+                            3 Mins Read</p>
+                    </div>
+                </div>
+                <div class="flex justify-between gap-16 flex-col md:flex-row">
+                    <div class="w-2/4 mt-4">
+                        <div class="flex justify-between gap-2 flex-col md:flex-row">
+                            <h3 class="text-lg font-bold text-gray-600">BEST PACKAGES - PART 1</h3>
+                            <p class="text-lg text-gray-500">24 MAY 2022</p>
+                        </div>
+                        <h4 class="text-2xl font-bold my-3">Minimalist Guide to Flutter Hooks</h4>
+                        <p class="text-lg">Hooks are a new kind of object that manages a Widget life-cycles. Hooks are a new kind of object that manages a Widget life-cycles. They exist for one reason: increase the code-sharing between widgets by removing duplicates. They exist for one reason: increase the fe-cycles. code-sharing between....</p>
+                    </div>
+                    <div class="w-2/4 mt-4">
+                        <div class="flex justify-between gap-2 flex-col md:flex-row">
+                            <h3 class="text-lg font-bold text-gray-600">BEST PACKAGES - PART 1</h3>
+                            <p class="text-lg text-gray-500">24 MAY 2022</p>
+                        </div>
+                        <h4 class="text-2xl font-bold my-3">Minimalist Guide to Flutter Hooks</h4>
+                        <p class="text-lg">Hooks are a new kind of object that manages a Widget life-cycles. Hooks are a new kind of object that manages a Widget life-cycles. They exist for one reason: increase the code-sharing between widgets by removing duplicates. They exist for one reason: increase the fe-cycles. code-sharing between....</p>
+                    </div>
                 </div>
             </div>
         </section>
